--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,12 +1,12 @@
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["setuptools", "setuptools-scm"]
+build-backend = "setuptools.build_meta"
 
 [project]
 name = "skinoptics"
 version = "0.0.1b1"
 authors = [
-  { name="Victor Lima", email="victorporto@ifsc.usp.br"},
+  { name="Victor Lima", email="victorporto@ifsc.usp.br" },
 ]
 description = "SkinOptics: a python package with tools for building human skin computational models for Monte Carlo simulations of light transport"
 readme = "README.md"
