--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "setuptools.build_meta"
 name = "skinoptics"
 version = "0.0.1b1"
 authors = [
-  { name="Victor Lima", email="victorporto@ifsc.usp.br" },
+  { name="Victor Lima", email="victorporto@ifsc.usp.br"},
 ]
 description = "SkinOptics: a python package with tools for building human skin computational models for Monte Carlo simulations of light transport"
 readme = "README.md"
@@ -24,3 +24,10 @@ dependencies = [
 
 [project.urls]
 Homepage = "https://github.com/victorportog/skinoptics"
+
+[tool.setuptools.packages.find]
+where = ["."]
+
+[tool.setuptools.package-data]
+"datasets.colors" = ["*.txt"]
+"datasets.optical_properties" = ["*.txt"]
